unpackaged/main/default/objects/Sales_Rep__c/Sales_Rep__c.object-meta.xml
<CustomObject>
    <description>Bunnings&#39; Sales Rep ID assigned to team members and stores for attribution. This is based from a legacy definition of sales rep hierrachy and ids.</description>
    <label>Sales Rep</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Sales Rep ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>