unpackaged/main/default/objects/Sales_Rep__c/fields/Assigned_to_Store__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Store the sales rep id is assigned to</description>
    <label>Assigned to Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Sales Rep</relationshipLabel>
    <relationshipName>Sales_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>