unpackaged/main/default/objects/Sales_Rep__c/fields/Assigned_to_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team member the sales rep is assigned to</description>
    <label>Assigned to Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>