unpackaged/main/default/objects/Sales_Rep__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>This field is used in conjunction with custom metadata type (Sales Rep Category Mapping) and user&#39;s Bunnings Job Role, Location Code field to determine the Sales Rep Id for the store member TS.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Landscape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>