unpackaged/main/default/objects/Sales_Rep__c/fields/Current_Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales_Rep_ID__c</fullName>
    <description>If the leagcy sales rep id is assigned then it is considered as sales rep number else newly generated auto number sales rep id from Salesforce is used</description>
    <formula>IF(ISBLANK(Sales_Rep_Legacy_ID__c),  Name , Sales_Rep_Legacy_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Sales Rep ID</label>
    <type>Text</type>
</CustomField>