unpackaged/main/default/objects/Sales_Rep__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSW/ACT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SANTTAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>Account Managed - NZ</fullName>
            </value>
            <value>
                <fullName>ASM - Upper NI</fullName>
            </value>
            <value>
                <fullName>ASM - Lower NI &amp; SI</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 1</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 2</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 3</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 4</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 5</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 6</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 7</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 8</fullName>
            </value>
            <value>
                <fullName>CCS</fullName>
            </value>
            <value>
                <fullName>Organisations</fullName>
            </value>
            <value>
                <fullName>B&amp;O</fullName>
                <isActive>false</isActive>
                <label>B&amp;O</label>
            </value>
            <value>
                <fullName>B.D.M</fullName>
                <isActive>false</isActive>
                <label>B.D.M</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>