unpackaged/main/default/objects/Sales_Rep__c/fields/Sales_Rep_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Legacy_ID__c</fullName>
    <description>Legacy Sales Rep ID as obtained form CCRM.</description>
    <label>Sales Rep Legacy ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>