unpackaged/main/default/objects/Sales_Rep__c/fields/Sub_Region_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Region Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Region_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>