unpackaged/main/default/objects/Sales_Rep__c/fields/Subregion__c.field-meta.xml
<CustomField>
    <fullName>Subregion__c</fullName>
    <label>Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Contact Centre</fullName>
            </value>
            <value>
                <fullName>Project Team</fullName>
            </value>
            <value>
                <fullName>Hunter</fullName>
            </value>
            <value>
                <fullName>Volume Builder Accounts</fullName>
            </value>
            <value>
                <fullName>Sydney West and Central West</fullName>
            </value>
            <value>
                <fullName>South Coast, ACT &amp; Riverina</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>North Coast</fullName>
            </value>
            <value>
                <fullName>Project Group</fullName>
            </value>
            <value>
                <fullName>Brisbane North and Wide Bay</fullName>
            </value>
            <value>
                <fullName>Brisbane South and Western Regions</fullName>
            </value>
            <value>
                <fullName>Gold and Sunshine Coast</fullName>
            </value>
            <value>
                <fullName>Regional Queensland</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>SA / NT</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>West Victoria</fullName>
            </value>
            <value>
                <fullName>North West Victoria</fullName>
            </value>
            <value>
                <fullName>Key Account Manager</fullName>
            </value>
            <value>
                <fullName>North East Victoria</fullName>
            </value>
            <value>
                <fullName>North Perth / Regional WA</fullName>
            </value>
            <value>
                <fullName>Project Builders / Multi Res</fullName>
            </value>
            <value>
                <fullName>South Perth / Regional WA</fullName>
            </value>
            <value>
                <fullName>Account Managed - NZ</fullName>
            </value>
            <value>
                <fullName>ASM - Upper NI</fullName>
            </value>
            <value>
                <fullName>ASM - Lower NI &amp; SI</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 1</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 2</fullName>
            </value>
            <value>
                <fullName>Trade NZ - Area 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>