unpackaged/main/default/objects/Sales_Rep__c/recordTypes/AU_Sales_Rep.recordType-meta.xml
<RecordType>
    <fullName>AU_Sales_Rep</fullName>
    <active>true</active>
    <label>AU Sales Rep</label>
</RecordType>