unpackaged/main/default/objects/Sales_Rep__c/recordTypes/NZ_Sales_Rep.recordType-meta.xml
<RecordType>
    <fullName>NZ_Sales_Rep</fullName>
    <active>true</active>
    <label>NZ Sales Rep</label>
</RecordType>