unpackaged/main/default/objects/Sales_Rep__c/validationRules/Either_Store_or_Team_Member_Not_Both.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Store_or_Team_Member_Not_Both</fullName>
    <active>true</active>
    <description>Only a Team Member or Store can be populated, not both</description>
    <errorConditionFormula>OR(
AND( ISBLANK( Assigned_to_Store__c ), ISBLANK(  Assigned_to_Team_Member__c ) ),
AND( !ISBLANK( Assigned_to_Store__c ), !ISBLANK(  Assigned_to_Team_Member__c ))
)</errorConditionFormula>
    <errorMessage>Only a Team Member or Store can be populated, not both</errorMessage>
</ValidationRule>