unpackaged/main/default/objects/Sales_Rep__c/validationRules/Team_Member_Category_Default_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_Member_Category_Default_Only</fullName>
    <active>true</active>
    <description>Team Member Sales Rep record can only choose Default as the Category</description>
    <errorConditionFormula>AND(
!ISBLANK( Assigned_to_Team_Member__c  ),
!ISPICKVAL(Category__c, &quot;Default&quot;) 
)</errorConditionFormula>
    <errorMessage>You can only use the Default Category for a Team Member</errorMessage>
</ValidationRule>