unpackaged/main/default/objects/Sales_Rep__c/listViews/NZ_Sales_Team.listView-meta.xml
<ListView>
    <fullName>NZ_Sales_Team</fullName>
    <columns>Current_Sales_Rep_ID__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_to_Team_Member__c</columns>
    <columns>Status__c</columns>
    <columns>Region__c</columns>
    <columns>Subregion__c</columns>
    <columns>Sub_Region_Manager__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>New Zealand</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Rep__c.NZ_Sales_Rep</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>NZ Sales Team</label>
    <sharedTo>
        <group>System_Administrator</group>
        <group>System_Coordinator</group>
    </sharedTo>
</ListView>